fix new menu not showing on mobile, fix #18879

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -729,6 +729,7 @@ table.dragshadow td.size {
 	width: 140px;
 	margin-left: -56px;
 	margin-top: 25px;
+	z-index: 1001;
 }
 
 .newFileMenu .menuitem {
